--- a/src/assets/scss/components/blocks/_block_4.scss
+++ b/src/assets/scss/components/blocks/_block_4.scss
@@ -145,7 +145,7 @@
 
         @include respond-to(sm) {
             font-size: 16px;
-            margin-bottom: 0;
+            margin-bottom: 35px;
 
         }
 
