--- a/src/assets/scss/components/sections/section_13.scss
+++ b/src/assets/scss/components/sections/section_13.scss
@@ -53,11 +53,11 @@
     }
 
     & .section_13__button {
+        display: block;
         margin-top: 36px;
         width: 208px;
         margin-left: auto;
         margin-right: auto;
-
 
         @include respond-to(sm) {
             width: 251px;
